# StrengthApp

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  (+1 more)
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko3/: tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
python-strength-app/: .pylintrc  README.md  pyproject.toml  tasks.py
python-strength-app/data/: database.sqlite  shoulderpress.csv  squat.csv  test-database.sqlite
python-strength-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusmäärittely.md
python-strength-app/src/: build.py  database_connection.py  file_reader.py  index.py  initialize_database.py
python-strength-app/src/entities/: user.py
python-strength-app/src/repositories/: exercise_repository.py  user_repository.py
python-strength-app/src/services/: user_service.py
python-strength-app/src/tests/: squat_test.py  test.py
python-strength-app/src/tests/repositories/: user_repository_test.py
python-strength-app/src/tests/services/: user_service_test.py
python-strength-app/src/ui/: bench_press_data.py  bench_press_view.py  calendar_view.py  create_new_user.py  create_new_user_view.py  deadlift_data.py  deadlift_view.py  exercise_list_view.py  login_view.py  pull_up_data.py  pull_up_view.py  shoulder_press_data.py  shoulder_press_view.py  squat.csv  squat_data.py  squat_view.py  ui.py
(+2 files in other folders)
