[tool.poetry]
name = "python-strength-app"
version = "0.1.0"
description = ""
authors = ["Niki Hietala <niki.hietala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
