[tool.poetry]
name = "python-strength-app"
version = "0.1.0"
description = ""
authors = ["Niki Hietala <niki.hietala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
